# homelife.ai

./: CLAUDE.md  Dockerfile.daemon  README.ja.md  README.md  electron-builder.yml  getting-started.md  life.toml  pyproject.toml  start.sh
daemon/: __main__.py  activity.py  analyzer.py  cli.py  config.py  daemon.py  embedding.py  knowledge.py  live.py  notify.py  report.py
daemon/analysis/: change.py  presence.py  scene.py  transcribe.py
daemon/capture/: audio.py  camera.py  screen.py  window.py
daemon/chat/: __init__.py  base.py  discord.py  manager.py
daemon/claude/: analyzer.py  review.py
daemon/llm/: __init__.py  base.py  claude.py  gemini.py
daemon/storage/: database.py  models.py
daemon/summary/: formatter.py  timeline.py
life/: activity.py  analyzer.py  live.py
life/capture/: camera.py
life/llm/: gemini.py
tests/: test_activity.py  test_analyzer.py  test_config.py  test_database.py  test_embedding.py  test_retention.py
web/: package-lock.json  package.json  vite.config.ts
web/server/: index.ts
web/server/routes/: activities.ts
web/src/: App.tsx  global.css  index.html
web/src/__tests__/: activity.test.ts  date.test.ts  i18n.test.ts
web/src/components/: ChatPanel.tsx  Dashboard.tsx  DetailPanel.tsx  FrameViewer.tsx  Header.tsx  LiveFeed.tsx  Onboarding.tsx  SearchPanel.tsx  Settings.tsx  SummaryPanel.tsx  Timeline.tsx
web/src/hooks/: useDailyMemo.ts  useEvents.ts  useFrames.ts  useSummaries.ts
web/src/lib/: activity.ts  api.ts  date.ts  types.ts
web/src/locales/: en.json  ja.json
